dashboard api created with swagger
